Work on configure basics

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,7 @@
 ## Toplevel Makefile.am for forestclaw
+
+ACLOCAL_AMFLAGS = -I config -I sc/config
+
+DISTCLEANFILES=
+
+DISTCLEANFILES+= _configs.sed src/fclaw_config.h
