Temporary: compile first file

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,5 +3,9 @@
 ACLOCAL_AMFLAGS = -I config -I sc/config
 
 DISTCLEANFILES=
+lib_LTLIBRARIES=
 
 DISTCLEANFILES+= _configs.sed src/fclaw_config.h
+
+## using nonrecursive make
+include src/Makefile.am
