Edit build system

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,14 @@
 ## Toplevel Makefile.am for forestclaw
 
 ACLOCAL_AMFLAGS = -I config -I sc/config
+AM_CPPFLAGS =
+DISTCLEANFILES =
+EXTRA_DIST =
+lib_LTLIBRARIES =
 
-DISTCLEANFILES=
-lib_LTLIBRARIES=
+DISTCLEANFILES += _configs.sed src/fclaw_config.h
 
-DISTCLEANFILES+= _configs.sed src/fclaw_config.h
+EXTRA_DIST += bootstrap config/fclaw_include.m4 config/git-version-gen
 
 ## using nonrecursive make
 include src/Makefile.am
