Enable sc subdirectory configure

--- a/configure.ac
+++ b/configure.ac
@@ -28,18 +28,22 @@ if test -e "$srcdir/sc/src/sc.h" ; then
 AC_MSG_RESULT([yes])
 FCLAW_IS_TOPLEVEL=true
 FCLAW_TOPLEVEL_SRCDIR=$srcdir
+FCLAW_SUBDIRS=sc
 AC_DEFINE([IS_TOPLEVEL], [1], [We are a toplevel package])
+AC_CONFIG_SUBDIRS([sc])
 else
 if test -e "$srcdir/../sc/src/sc.h" ; then
 AC_MSG_RESULT([no])
 FCLAW_IS_TOPLEVEL=
 FCLAW_TOPLEVEL_SRCDIR=$srcdir/..
+FCLAW_SUBDIRS=
 else
 AC_MSG_ERROR([Could not find package sc])
 fi
 fi
 AM_CONDITIONAL([IS_TOPLEVEL], [test x$FCLAW_IS_TOPLEVEL = xtrue])
 AC_SUBST([FCLAW_TOPLEVEL_SRCDIR])
+AC_SUBST([FCLAW_SUBDIRS])
 
 # Checks for MPI C compiler and other programs (no F77 at this point!).
 echo "o---------------------------------------"
