--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,6 @@
 ## Makefile.am in src
 
+FCLAW_LDADD = @top_builddir@/src/libforestclaw.la
+
 lib_LTLIBRARIES += src/libforestclaw.la
 src_libforestclaw_la_SOURCES = src/fclaw2d_base.h src/fclaw2d_base.c
