Converted waveprop solver to clawpack

--- a/applications/advection/2d/swirl/Makefile
+++ b/applications/advection/2d/swirl/Makefile
@@ -1,4 +1,4 @@
-# Makefile for sphere example
+# Makefile for swirl example
 
 TARGET = swirl
 GEO = cart
@@ -25,9 +25,9 @@ exampleobjs = \
 	swirl_output.o
 
 # Solver routines (several solvers can be added here)
-include Makefile.waveprop.inc
-solverobjs = $(waveprop_objs)
-solverincludes = $(waveprop_includes)
+include Makefile.clawpack.inc
+solverobjs = $(clawpack_objs)
+solverincludes = $(clawpack_includes)
 
 # Mapping routines
 geoobjs = $(FORESTCLAW)/src/mappings/cart/set_maptype_cart.o
