--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -1,10 +1,10 @@
 [Options]
      mx = 8		  # mx_leaf
-     my = 8              # my_leaf
+     my = 8               # my_leaf
 
-     serialout = F
+     serialout = T
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
      minlevel = 1         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
