Changed path to solver files from absolute to relative paths;  makes 'make' output easier to read

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ FC = gfortran
 #FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
 FFLAGS = -O0 -g -Wno-unused-variable $(LOCAL_FFLAGS)
 
-FORTRAN_SRC = $(FORESTCLAW)/src/fortran_source2d
+FORTRAN_SRC = fortran_source2d
 FORTRAN_INC = $(FORTRAN_SRC)
 
 fclawobjs = \
