--- a/configure.ac
+++ b/configure.ac
@@ -2,9 +2,9 @@ dnl
 dnl This file is part of ForestClaw.
 dnl
 
-dnl We need a forwarding email for both Donna and Carsten.
-AC_INIT([forestclaw],
-        [m4_esyscmd([config/git-version-gen .tarball-version])],
+dnl TODO: We need a forwarding email for both Donna and Carsten.
+AC_INIT([ForestClaw],
+        [m4_esyscmd([build-aux/git-version-gen .tarball-version])],
         [burstedde@ins.uni-bonn.de])
 AC_PREREQ(2.61)
 AC_CONFIG_HEADERS([src/pre_config.h])
@@ -17,116 +17,76 @@ AM_INIT_AUTOMAKE([parallel-tests subdir-objects])
 AM_SILENT_RULES
 SC_VERSION([FCLAW])
 
-# Check for subpackage sc
 echo "o---------------------------------------"
-echo "| Checking for subpackages"
-echo "o---------------------------------------"
-
-AC_MSG_NOTICE([Current srcdir: $srcdir])
-AC_MSG_CHECKING([whether we are a toplevel package])
-if test -e "$srcdir/sc/src/sc.h" ; then
-AC_MSG_RESULT([yes])
-FCLAW_IS_TOPLEVEL=true
-FCLAW_TOPLEVEL_MOD=
-FCLAW_SUBDIRS=sc
-AC_DEFINE([IS_TOPLEVEL], [1], [We are a toplevel package])
-AC_CONFIG_SUBDIRS([sc])
-else
-if test -e "$srcdir/../sc/src/sc.h" ; then
-AC_MSG_RESULT([no])
-FCLAW_IS_TOPLEVEL=
-FCLAW_TOPLEVEL_MOD=/..
-FCLAW_SUBDIRS=
-else
-AC_MSG_ERROR([Could not find package sc])
-fi
-fi
-AM_CONDITIONAL([IS_TOPLEVEL], [test x$FCLAW_IS_TOPLEVEL = xtrue])
-dnl In Makefile.am files we can use
-dnl $(top_srcdir)@FCLAW_TOPLEVEL_MOD@/path and it should work
-AC_SUBST([FCLAW_TOPLEVEL_MOD])
-AC_SUBST([FCLAW_SUBDIRS])
-
-# Checks for MPI C compiler and other programs (no F77 at this point!).
-echo "o---------------------------------------"
-echo "| Checking MPI and other programs"
+echo "| Checking options"
 echo "o---------------------------------------"
 
-SC_MPI_CONFIG([FCLAW])
+FCLAW_ARG_ENABLE([debug], [enable debug mode (assertions and extra checks)],
+                 [DEBUG])
+
+echo "o---------------------------------------"
+echo "| Checking MPI and related programs"
+echo "o---------------------------------------"
+
+SC_MPI_CONFIG([FCLAW], [yes], [yes])
 SC_MPI_ENGAGE([FCLAW])
 # This is needed for compatibility with automake >= 1.12
 m4_ifdef([AM_PROG_AR],[AM_PROG_AR])
-AM_PROG_CC_C_O
+SC_PROG_LINT
 LT_INIT
 
-# Checks for libraries.
 echo "o---------------------------------------"
 echo "| Checking libraries"
 echo "o---------------------------------------"
 
-SC_REQUIRE_LIB([m], [fabs])
+SC_CHECK_LIBRARIES([FCLAW])
+P4EST_CHECK_LIBRARIES([FCLAW])
+FCLAW_CHECK_LIBRARIES([FCLAW])
 
-dnl dnl dnl # Checks for header files.
-dnl dnl dnl echo "o---------------------------------------"
-dnl dnl dnl echo "| Checking headers"
-dnl dnl dnl echo "o---------------------------------------"
-dnl dnl dnl 
-dnl dnl dnl AC_CHECK_HEADERS([execinfo.h signal.h sys/time.h sys/types.h time.h])
-
-# Checks for functions.
 echo "o---------------------------------------"
-echo "| Checking functions"
+echo "| Checking subpackages"
 echo "o---------------------------------------"
 
-dnl dnl dnl AC_CHECK_FUNCS([backtrace backtrace_symbols])
+FCLAW_DIST_DENY=
+FCLAW_DISTCLEAN=
+SC_AS_SUBPACKAGE([FCLAW])
+export P4EST_SC_SOURCE=../sc
+P4EST_AS_SUBPACKAGE([FCLAW])
+AM_CONDITIONAL([FCLAW_DIST_DENY], [test "x$FCLAW_DIST_DENY" != x])
+AC_SUBST([FCLAW_DISTCLEAN])
 
-dnl dnl dnl AC_PROG_F77([gfortran g77 fl32 f77 fort77 xlf f90 xlf90])
-dnl dnl dnl AC_F77_WRAPPERS
-dnl dnl dnl AC_F77_LIBRARY_LDFLAGS
-dnl dnl dnl dgemm=;AC_F77_FUNC(dgemm)
-
-# Checks for typedefs, structures, and compiler characteristics.
-echo "o---------------------------------------"
-echo "| Checking keywords and types"
-echo "o---------------------------------------"
-
-AC_C_BIGENDIAN
-AC_C_CONST
-AC_C_INLINE
-AC_C_RESTRICT
-AC_CHECK_SIZEOF([long])
-AC_CHECK_SIZEOF([unsigned long])
-AC_TYPE_SIZE_T
-AC_TYPE_SSIZE_T
-
-AC_DEFINE_UNQUOTED(CC,          ["${CC}"],          [C compiler])
-AC_DEFINE_UNQUOTED(CFLAGS,      ["${CFLAGS}"],      [C compiler flags])
+# Print summary.
 AC_DEFINE_UNQUOTED(CPP,         ["${CPP}"],         [C preprocessor])
 AC_DEFINE_UNQUOTED(CPPFLAGS,    ["${CPPFLAGS}"],    [C preprocessor flags])
 AC_DEFINE_UNQUOTED(F77,         ["${F77}"],         [F77 compiler])
 AC_DEFINE_UNQUOTED(FFLAGS,      ["${FFLAGS}"],      [F77 compiler flags])
+AC_DEFINE_UNQUOTED(CC,          ["${CC}"],          [C compiler])
+AC_DEFINE_UNQUOTED(CFLAGS,      ["${CFLAGS}"],      [C compiler flags])
+AC_DEFINE_UNQUOTED(CXX,         ["${CXX}"],         [C++ compiler])
+AC_DEFINE_UNQUOTED(CXXFLAGS,    ["${CXXFLAGS}"],    [C++ compiler flags])
 AC_DEFINE_UNQUOTED(LDFLAGS,     ["${LDFLAGS}"],     [Linker flags])
-AC_DEFINE_UNQUOTED(BLAS_LIBS,   ["${BLAS_LIBS}"],   [BLAS libraries])
-AC_DEFINE_UNQUOTED(LAPACK_LIBS, ["${LAPACK_LIBS}"], [LAPACK libraries])
 AC_DEFINE_UNQUOTED(LIBS,        ["${LIBS}"],        [Libraries])
-AC_DEFINE_UNQUOTED(FLIBS,       ["${FLIBS}"],       [Fortran libraries])
 
 echo "o----------------------------------"
-echo "| Results for libsc are"
+echo "| Results for ForestClaw are"
 echo "o----------------------------------"
-echo "| CC:          $CC"
-echo "| CFLAGS:      $CFLAGS"
 echo "| CPP:         $CPP"
 echo "| CPPFLAGS:    $CPPFLAGS"
 echo "| F77:         $F77"
 echo "| FFLAGS:      $FFLAGS"
+echo "| CC:          $CC"
+echo "| CFLAGS:      $CFLAGS"
+echo "| CXX:         $CXX"
+echo "| CXXFLAGS:    $CXXFLAGS"
 echo "| LDFLAGS:     $LDFLAGS"
-echo "| BLAS_LIBS:   $BLAS_LIBS"
-echo "| LAPACK_LIBS: $LAPACK_LIBS"
 echo "| LIBS:        $LIBS"
-echo "| FLIBS:       $FLIBS"
 echo "o----------------------------------"
 
 # Create output files.
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile Makefile.fclaw.pre Doxyfile])
 AC_OUTPUT
+
+# Final messages.
+SC_FINAL_MESSAGES([FCLAW])
+P4EST_FINAL_MESSAGES([FCLAW])
+FCLAW_FINAL_MESSAGES([FCLAW])
