--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sc"]
 	path = sc
-	url = http://burstedde.ins.uni-bonn.de/repos/libsc.git
+	url = git@github.com:cburstedde/libsc.git
+[submodule "p4est"]
+	path = p4est
+	url = git@github.com:cburstedde/p4est.git
