Compile amr_options

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,9 +4,11 @@
 # included non-recursively from toplevel directory
 
 libforestclaw_generated_headers = src/fclaw_config.h
-libforestclaw_installed_headers = src/fclaw_base.h src/fclaw2d_base.h
+libforestclaw_installed_headers = src/fclaw_base.h src/amr_options.h \
+ src/fclaw2d_base.h
 libforestclaw_internal_headres =
-libforestclaw_compiled_sources = src/fclaw2d_base.c
+libforestclaw_compiled_sources = src/fclaw_base.h src/amr_options.c \
+ src/fclaw2d_base.c
 
 # this variable is used for headers that are not publicly installed
 FCLAW_CPPFLAGS =
