Enable main forestclaw/p4est files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,10 +5,10 @@
 
 libforestclaw_generated_headers = src/fclaw_config.h
 libforestclaw_installed_headers = src/fclaw_base.h src/amr_options.h \
- src/fclaw2d_base.h
+ src/fclaw2d_base.h src/forestclaw2d.h src/fclaw2d_convenience.h
 libforestclaw_internal_headres =
 libforestclaw_compiled_sources = src/fclaw_base.c src/amr_options.c \
- src/fclaw2d_base.c
+ src/fclaw2d_base.c src/forestclaw2d.c src/fclaw2d_convenience.c
 
 # this variable is used for headers that are not publicly installed
 FCLAW_CPPFLAGS =
