Hopefully fix three examples to compile

--- a/applications/metric/2d/sphere/Makefile
+++ b/applications/metric/2d/sphere/Makefile
@@ -6,8 +6,7 @@ GEO = sphere
 include $(FORESTCLAW)/Make.defs.local
 
 # -----------------------------------------------------------
-FC = gfortran
-FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
+FFLAGS = -O0 -g -Wno-unused-variable $(LOCAL_FFLAGS)
 
 # -----------------------------------------------------------
 # Define local objects here
