--- a/applications/metric/2d/sphere/Makefile
+++ b/applications/metric/2d/sphere/Makefile
@@ -6,7 +6,7 @@ GEO = sphere
 include $(FORESTCLAW)/Make.defs.local
 
 # -----------------------------------------------------------
-FFLAGS = -O0 -g -Wno-unused-variable $(LOCAL_FFLAGS)
+FFLAGS = $(LOCAL_FFLAGS)
 
 # -----------------------------------------------------------
 # Define local objects here
@@ -48,7 +48,7 @@ default: $(TARGET)
 	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
 
 .f.o:
-	$(FC) -Wall $(FFLAGS) -I${FORT_INC} -c $<  -o $@
+	$(FC) $(FFLAGS) -I${FORT_INC} -c $<  -o $@
 
 .PHONY: clean realclean default $(TARGET)
 
