--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,7 @@
 include $(FORESTCLAW)/Make.defs.local
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
-# Not every compiler likes this argument.  May live in Make.defs.local.
-#FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
-FFLAGS = -O0 -g -Wno-unused-variable $(LOCAL_FFLAGS)
+FFLAGS = $(LOCAL_FFLAGS)
 
 FORTRAN_SRC = $(FORESTCLAW)/src/fortran_source2d
 FORTRAN_INC = $(FORTRAN_SRC)
@@ -65,7 +63,7 @@ libforestclaw.a: $(fclawobjs)
 	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -I. -c $< -o $@
 
 .f.o:
-	$(FC) -Wall $(FFLAGS) -c $< -o $@
+	$(FC) $(FFLAGS) -c $< -o $@
 
 clean:
 	rm -f *.o *.a $(fclawobjs)
