Fixed mapping functions so that set_maptype_<type> is called from setprob.f

--- a/applications/advection/2d/swirl/Makefile
+++ b/applications/advection/2d/swirl/Makefile
@@ -29,7 +29,7 @@ solverobjs = $(waveprop_objs)
 solverincludes = $(waveprop_includes)
 
 # Mapping routines
-geoobjs = $(FORESTCLAW)/src/mappings/cart/set_maptype_cart.o
+# geoobjs = $(FORESTCLAW)/src/mappings/cart/set_maptype_cart.o
 
 OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs) $(geoobjs) $(localobjs)
 
