setprob now sets sphere mapping explicitly

--- a/applications/NCAR_transport/slotted_disk/Makefile
+++ b/applications/NCAR_transport/slotted_disk/Makefile
@@ -37,10 +37,7 @@ include Makefile.waveprop.inc
 solverobjs = $(waveprop_objs)
 solverincludes = $(waveprop_includes)
 
-# Mapping routines
-geoobjs = $(FORESTCLAW)/src/mappings/sphere/set_maptype_${GEO}.o
-
-OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs) $(geoobjs)
+OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs)
 
 # -----------------------------------------------------------
 # The rest of this is more or less default.
