--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,7 +28,7 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_map.c \
 	src/clawpack_fort.cpp \
 	src/mappings/block.f \
-	src/mappings/set_maptype.f
+	src/mappings/set_maptype.f \
 	src/mappings/scale_rot_map.f \
 	src/mappings/cart/mapc2m_cart.f \
 	src/mappings/disk/mapc2m_disk.f \
