Remaining files needed to compile dummy application

--- a/applications/dummy/Makefile.am
+++ b/applications/dummy/Makefile.am
@@ -1,4 +1,6 @@
 ## Makefile.am in applications/dummy
 
 bin_PROGRAMS += applications/dummy/fclaw2d_dummy
-applications_dummy_fclaw2d_dummy_SOURCES = applications/dummy/fclaw2d_dummy.c
+
+applications_dummy_fclaw2d_dummy_SOURCES = applications/dummy/fclaw2d_dummy.c \
+	applications/dummy/ghost_twopatch.f
