--- a/src/solvers/amr_waveprop/Makefile.am
+++ b/src/solvers/amr_waveprop/Makefile.am
@@ -1,12 +1,18 @@
 # -*- Makefile -*-
 
-include_HEADERS += -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
+## This variable should list the .h and .H files from the source tree that
+## should be installed in the "include" directory.
+## include_HEADERS += -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
 
-solver_SOURCES += \
-	src/solvers/amr_waveprop/amr_waveprop.cpp \
-	src/solvers/amr_waveprop/fortran_source/limiter.f \
-	src/solvers/amr_waveprop/fortran_source/src2.f \
-	src/solvers/amr_waveprop/fortran_source/bc2.f \
-	src/solvers/amr_waveprop/fortran_source/flux2.f \
-	src/solvers/amr_waveprop/fortran_source/step2.f \
-	src/solvers/amr_waveprop/fortran_source/ClawPatch2.f
+## The first part of the variable, "solver," must refer to a library or a
+## program that is to be built.  That is, a target file that itself has
+## been mentioned in bin_PROGRAMS for example.  Any variable used with +=
+## must also first be initialized with = (usually to empty).
+## solver_SOURCES += \
+## 	src/solvers/amr_waveprop/amr_waveprop.cpp \
+## 	src/solvers/amr_waveprop/fortran_source/limiter.f \
+## 	src/solvers/amr_waveprop/fortran_source/src2.f \
+## 	src/solvers/amr_waveprop/fortran_source/bc2.f \
+## 	src/solvers/amr_waveprop/fortran_source/flux2.f \
+## 	src/solvers/amr_waveprop/fortran_source/step2.f \
+## 	src/solvers/amr_waveprop/fortran_source/ClawPatch2.f
